# tacertoosite

./: .gitignore  DEVELOPMENT.md  LICENSE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: database.py  main.py
backend/app/controllers/: brand_controller.py  validation_controller.py
backend/app/data/: brands.json
backend/app/database_models/: __init__.py  app_event_record.py  company_record.py
backend/app/models/: brand.py  company.py  validation_result.py
backend/app/repositories/: app_event_repository.py  brand_repository.py  company_repository.py
backend/app/routes/: brand_routes.py  company_routes.py  health_routes.py  validation_routes.py
backend/app/services/: app_event_service.py  brand_service.py  company_service.py  domain_normalizer_service.py  domain_validation_service.py
backend/app/utils/: response.py
backend/supabase/migrations/: 20260511205622_create_app_events.sql  20260511205758_move_app_events_to_internal_schema.sql  20260511205919_add_internal_log_policies.sql  20260511232906_store_raw_ip_address_in_app_events.sql  20260511233259_drop_actor_columns_from_app_events.sql
backend/tests/: test_app_event_repository.py  test_app_event_service.py  test_company_repository.py  test_company_routes.py  test_domain_normalizer.py  test_domain_validation.py  test_health_routes.py  test_security_config.py  test_supabase_integration.py  test_validation_routes.py
docs/: CNAME  app.js  index.html  styles.css
docs/assets/: glossary-BJ7yQcFX.js  (+52 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+49 files in other folders)
