[project]
name = "antiscam-backend"
version = "0.1.0"
description = "API para validar se dominios informados correspondem a dominios oficiais cadastrados."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

